Make only integration test - green, Add book-api-client service

--- a/.env
+++ b/.env
@@ -31,3 +31,5 @@ APP_SECRET=92e6570ed6c38f3170f7bf451f13d618
 DATABASE_URL="postgresql://api_books_app:123{@f@api_books_postgres:5432/tracker_books?serverVersion=13&charset=utf8"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+RAPID_API_KEY="KEY"
